--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,13 +5,14 @@
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 0px);
 }
 
 .home-container .title {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    text-align: left;
 }
 
 .home-container .title h1 {
