--- a/src/components/todolist/TodoList.css
+++ b/src/components/todolist/TodoList.css
@@ -2,6 +2,7 @@
     margin-top: 70px;
     font-weight: bold;
     width: 100%;
+    min-height: calc(100vh - 170px);
 }
 
 
@@ -73,6 +74,20 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 30px;
+}
+
+.container-todo input[type="search"] {
+
+    width: clamp(300px, 40%, 600px);
+    border: none;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    border-radius: .6rem;
+    height: 40px;
+    padding-left: 10px;
+}
+
+.container-todo input[type="search"]:focus {
+    outline: none;
 }
 
 .container-todo .content {
@@ -162,4 +177,13 @@
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.ani-empty {
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
