--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     min-height: calc(100vh - 0px);
+    padding: 70px 30px 0px 30px;
 }
 
 .home-container .title {
@@ -58,4 +59,27 @@
 
 .home-container .title a:hover {
     filter: brightness(110%);
+}
+
+@media (max-width:1024px) {
+    .home-container {
+        padding: 40px 40px 0px 40px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: flex-start;
+        margin-top: 120px;
+        min-height: calc(100vh - 120px);
+    }
+
+    .home-container .title {
+        order: 2;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+    .home-container .title h1{
+        font-size: 2.2rem;
+    }
+
 }
