--- a/src/components/Form/add/Form.css
+++ b/src/components/Form/add/Form.css
@@ -1,6 +1,10 @@
+.form-container{
+    max-width: 900px;
+    width: 100%;
+}
 .form-container h2 {
     text-align: center;
-    font-weight: bold;
+
     margin: 70px 0 60px 0;
     color: #eb4312;
 
@@ -21,7 +25,7 @@
 
     padding-left: 20px;
     margin-bottom: 30px;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .form-container form .wrap-userID,
@@ -32,7 +36,7 @@
 
 .form-container form .wrap-userID label,
 .form-container form .wrap-desc label {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     margin-bottom: 20px;
 }
@@ -45,7 +49,7 @@
     height: 50px;
     padding-left: 20px;
     margin-bottom: 30px;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .form-container form textarea:focus,
@@ -61,7 +65,7 @@
 }
 
 .form-container form .wrap-checkbox label {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
     margin-left: 20px;
 }
@@ -102,7 +106,7 @@ input[type="checkbox"]:checked::after {
     height: 45px;
     border: 0;
     border-radius: .6rem;
-    font-size: 1rem;
+    font-size: .9rem;
     font-weight: bold;
 
 }
