--- a/src/components/todolist/TodoList.css
+++ b/src/components/todolist/TodoList.css
@@ -187,6 +187,28 @@
     transform: translate(-50%, -50%);
 
 }
+
+.buttonUp {
+    opacity: 0;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    width: 50px;
+    padding: 0;
+    height: 50px;
+    font-size: 1.6rem;
+    background-color: rgb(12 54 212 / 56%);
+    border-radius: 50%;
+    transition-duration: 300ms;
+    color: white;
+}
+
 @media (max-width:765px) {
     .container-todo .title {
         flex-direction: column;
