--- a/src/components/Completed/Completed.css
+++ b/src/components/Completed/Completed.css
@@ -1,4 +1,4 @@
-.title-completed {
+.title__completed {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -6,7 +6,7 @@
     margin-bottom: 60px;
 }
 
-.title-completed h2 {
+.title__completed h2 {
     text-transform: uppercase;
     color: #ff5273;
     display: flex;
@@ -14,29 +14,29 @@
     gap: 10px;
 }
 
-.title-completed p {
+.title__completed p {
     color: gray;
 }
 
-.completed-content {
+.completed__content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
 }
 
-.completed-content .complete-list{
+.completed__content .complete-__list{
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 1rem;
     padding: 30px;
     position: relative;
 }
-.completed-content .complete-list svg{
+.completed__content .complete-__list svg{
     position: absolute;
     right: 13px;
     bottom: 13px;
 }
 
-.loader-com{
+.loader__completed{
     position: absolute;
     display: flex !important;
     top: 50%;
