--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-.homeLayer {
+.home__layer {
     display: grid;
     grid-template-columns: 55% 45%;
     max-width: 1300px;
@@ -9,40 +9,40 @@
     padding: 70px 30px 0px 30px;
 }
 
-.homeLayer .title {
+.home__layer .home__title {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     text-align: left;
 }
 
-.homeLayer .title h1 {
+.home__layer .home__title h1 {
     font-weight: bold;
     font-size: 3.5rem;
     margin-bottom: 30px;
     color: #132181;
 }
 
-.homeLayer .title p {
+.home__layer .home__title p {
     font-size: 1rem;
     margin-bottom: 35px;
 }
 
-.homeLayer .title p a {
+.home__layer .home__title p a {
     font-weight: bold;
     color: #dd7c23;
     text-decoration: none;
     position: relative;
 }
 
-.homeLayer .title p a::after {
+.home__layer .home__title p a::after {
     content: "";
     position: absolute;
     border-bottom: 1px solid rgb(0, 102, 255);
     height: 2px;
 }
 
-.homeLayer .title .view {
+.home__layer .home__title .home__button {
     border: 0;
     color: white;
     font-size: 1rem;
@@ -57,12 +57,12 @@
     align-items: center;
 }
 
-.homeLayer .title a:hover {
+.home__layer .home__title a:hover {
     filter: brightness(110%);
 }
 
 @media (max-width:1024px) {
-    .homeLayer {
+    .home__layer {
         padding: 40px 40px 0px 40px;
         display: flex;
         flex-direction: column;
@@ -72,14 +72,27 @@
         min-height: calc(100vh - 120px);
     }
 
-    .homeLayer .title {
+    .home__layer .home__title {
         order: 2;
         text-align: center;
         justify-content: center;
         align-items: center;
     }
-    .homeLayer .title h1{
+
+    .home__layer .home__title h1 {
         font-size: 2.2rem;
     }
 
+}
+
+@media (max-width:574px) {
+    .home__layer {
+        margin-top: 0;
+        min-height: calc(100vh - 0px);
+        justify-content: center;
+    }
+
+    .ani--body {
+        max-width: 200px;
+    }
 }
