--- a/src/components/Home/swiper/styles.css
+++ b/src/components/Home/swiper/styles.css
@@ -61,16 +61,16 @@
 
 
 
-@media (max-width:1300px) {
+@media (max-width:1400px) {
 
     .swiper-button-prev,
     .swiper-rtl .swiper-button-next {
-        left: 50px !important;
+        left: 20px !important;
     }
 
     .swiper-button-next,
     .swiper-rtl .swiper-button-prev {
-        right: 50px !important;
+        right: 20px !important;
     }
 
 }
@@ -94,11 +94,18 @@
 
     }
 
-    .ani {
+    .ani--body {
         width: 70%;
         max-width: 250px;
         margin: 0 auto;
 
     }
 
+}
+
+@media (max-width:574px) {
+
+    .swiper-pagination {
+        bottom: 15px !important;
+    }
 }
