--- a/src/components/todolist/TodoList.css
+++ b/src/components/todolist/TodoList.css
@@ -1,4 +1,4 @@
-.container-todo {
+.todoContainer {
     margin-top: 70px;
     font-weight: bold;
     width: 100%;
@@ -8,7 +8,7 @@
 
 
 
-.container-todo .main {
+.todoContainer .todoContainer__header {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -17,7 +17,7 @@
 
 }
 
-.container-todo a {
+.todoContainer a {
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -33,7 +33,7 @@
     overflow: hidden;
 }
 
-.container-todo a p {
+.todoContainer a p {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -41,7 +41,7 @@
     position: absolute;
 }
 
-.container-todo a::before {
+.todoContainer a::before {
     content: '';
     background-color: #8b79e9;
     border-radius: 1rem;
@@ -53,22 +53,22 @@
 
 }
 
-.container-todo a:hover::before {
+.todoContainer a:hover::before {
     width: 150%;
 }
 
-.container-todo .main h2 {
+.todoContainer .todoContainer__header h2 {
     color: #eb4312;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container-todo .main .remain {
+.todoContainer .todoContainer__header .todoContainer__subHeader {
     color: gray;
 }
 
-.container-todo .title {
+.todoContainer .todoContainer__title {
     margin-bottom: 60px;
     display: flex;
     align-items: center;
@@ -76,7 +76,7 @@
     padding: 0 30px;
 }
 
-.container-todo input[type="search"] {
+.todoContainer input[type="search"] {
 
     width: clamp(300px, 40%, 600px);
     border: none;
@@ -86,11 +86,11 @@
     padding-left: 10px;
 }
 
-.container-todo input[type="search"]:focus {
+.todoContainer input[type="search"]:focus {
     outline: none;
 }
 
-.container-todo .content {
+.todoContainer .content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 
@@ -98,7 +98,7 @@
 
 }
 
-.container-todo .content .todoBox {
+.todoContainer .content .content_box {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 1rem;
     padding: 20px 20px 20px 30px;
@@ -110,7 +110,7 @@
     gap: 20px;
 }
 
-.container-todo .bar {
+.todoContainer .content_box_bar {
     position: absolute;
     left: 0;
     width: 9px;
@@ -118,31 +118,31 @@
     top: 0;
 }
 
-.content .todoBox .title-todo {
+.content .content_box .content_box_title {
     font-weight: bold;
     font-size: 1rem;
 }
 
-.content .todoBox.completed .bar {
+.content .content_box.completed .content_box_bar {
     opacity: .6;
 }
 
-.content .todoBox.completed .title-todo {
+.content .content_box.completed .content_box_title {
     text-decoration: line-through !important;
     opacity: .6;
 }
 
-.content .todoBox .wrap-text {
+.content .content_box .wrap-text {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.content .todoBox .wrap-text p {
+.content .content_box .wrap-text p {
     margin: 0;
 }
 
-.content .todoBox .btn-wrap {
+.content .content_box .content_box_btn_wrap {
 
     display: flex;
     align-items: center;
@@ -150,24 +150,24 @@
     gap: 20px;
 }
 
-.content .todoBox .btn-wrap button {
+.content .content_box .content_box_btn_wrap button {
     border: 0;
     font-size: 20px;
     border-radius: .3rem;
 }
 
-.content .todoBox .btn-wrap .btn--edit {
+.content .content_box .content_box_btn_wrap .btn--edit {
     background-color: #3edcd5;
     color: white;
 
 }
 
-.content .todoBox .btn-wrap .btn--edit:hover,
-.content .todoBox .btn-wrap .btn--del:hover {
+.content .content_box .content_box_btn_wrap .btn--edit:hover,
+.content .content_box .content_box_btn_wrap .btn--del:hover {
     filter: brightness(93%);
 }
 
-.content .todoBox .btn-wrap .btn--del {
+.content .content_box .content_box_btn_wrap .btn--del {
     background-color: #ff4747;
     color: white;
 }
@@ -179,7 +179,7 @@
     transform: translate(-50%, -50%);
 }
 
-.ani-empty {
+.ani_empty {
     width: 350px;
     position: absolute;
     top: 50%;
@@ -268,18 +268,18 @@
 }
 
 @media (max-width:765px) {
-    .container-todo .title {
+    .todoContainer .todoContainer__title {
         flex-direction: column;
         gap: 30px;
         margin-top: 60px;
     }
 
-    .container-todo a {
+    .todoContainer a {
         width: 100%;
       
     }
 
-    .container-todo input[type="search"] {
+    .todoContainer input[type="search"] {
         width: 100%;
     }
 
